# liburiparse

./: .gitignore  CMakeLists.txt
src/: uri.cpp  uri.h
